--- a/Styles/style.css
+++ b/Styles/style.css
@@ -40,3 +40,39 @@ header{
     text-decoration: none;
     color: #3A3A3A;
 }
+/* banner */
+.top-banner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* gap: 130px; */
+}
+.banner-left-side{
+    width: 582px;
+}
+.banner-left-title{
+    font-size: 3.15rem;
+    font-weight: 600;
+}
+.banner-left-description{
+    font-size: 1rem;
+    font-weight: 400;
+    margin: 16px 0;
+}
+.prmary-btn{
+    background-color: #E02C6D;
+    color: #FFFFFF;
+    padding: 10px 25px;
+    border: none;
+    border-radius: 40px;
+}
+.banner-right-image{
+    
+}
+.bottom-banner{
+    gap: 60px;
+    padding: 35px 60px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 65px;
+}
