--- a/Styles/style.css
+++ b/Styles/style.css
@@ -15,7 +15,7 @@
     color: #3A3A3A;
 }
 /* header */
-header{
+header,.feature-product{
     max-width: 1440px;
     margin: 0 auto;
 }
@@ -75,4 +75,65 @@ header{
     justify-content: center;
     align-items: center;
     margin-top: 65px;
+    margin-bottom: 100px;
+}
+
+/* card section */
+.card-section{
+    max-width: 1100px;
+    margin: 0 auto;
+}
+.card-title{
+    text-align: center;
+}
+.card-container{
+    padding: 30px 0;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 30px;
+
+}
+.card{
+    background-color: #FFFFFF;
+    display: flex;
+    /* border: 1px solid black; */
+    flex-direction: column;
+    /* justify-content: center; */
+    width: 330px;
+    height: 475px;
+    padding: 17px 15px;
+    gap: 16px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 40px 0px #eeeeee;
+
+}
+.card img{
+    border-radius: 5 px;
+}
+.see-more{
+    color: #E02C6D;
+    text-align: right;
+}
+
+/* feature section */
+.feature-product{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    display: flex;
+    gap: 96px;
+}
+.feature-right-text{
+    width: 610px;
+}
+
+/* footer */
+footer{
+    background-color: rgb(1, 1, 32);
+    align-items: center;
+}
+.footer-container{
+    color: white;
+    text-align: center;
+    padding: 50px 0px;
+    /* align-items: center; */
 }
