--- a/Styles/style.css
+++ b/Styles/style.css
@@ -85,6 +85,9 @@ header,.feature-product{
 }
 .card-title{
     text-align: center;
+    color: #3A3A3A;
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 .card-container{
     padding: 30px 0;
@@ -110,6 +113,24 @@ header,.feature-product{
 .card img{
     border-radius: 5 px;
 }
+.inner-card-title{
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+.inner-card-price{
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+.star-rating i{
+    color: orange;
+}
+.card-bottom-text{
+    display: flex;
+    flex-direction: column;
+}
+.card-bottom-text span{
+    color: #3A3A3A;
+}
 .see-more{
     color: #E02C6D;
     text-align: right;
@@ -131,9 +152,30 @@ footer{
     background-color: rgb(1, 1, 32);
     align-items: center;
 }
+.footer-title{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+.Copyright{
+    font-size: 0.80rem;
+    padding: 5px 0;
+}
 .footer-container{
     color: white;
     text-align: center;
     padding: 50px 0px;
     /* align-items: center; */
+}
+.social-link{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 18px;
+}
+.social-link a{
+    padding: 5px;
+    border-radius: 50%;
+    background-color: rgba(190, 186, 186, 0.377);
+    color: white;
 }
